--- a/logincss.css
+++ b/logincss.css
@@ -2,6 +2,7 @@ body{
 	/*background-image: url(https://images.shiksha.com/mediadata/images/1494567342phpSW2i1o.jpeg);
 	background-repeat: no-repeat;
 	background-size: cover;*/
+	zoom:100%;
 	
 }
 .full{
