--- a/park/templates/department.html
+++ b/park/templates/department.html
@@ -16,27 +16,27 @@
         <center><p class="pname">PARK COLLEGE OF ENGINEERING AND TECHNOLOGY</p></center>
         <div class="ci"><center><img src="{% static 'images/ci.png'%}" alt="" srcset=""></center></div>
         <div class="hr">
-            <a href="year/"><img src="{% static 'images/cse.png'%}" alt="cse image" srcset="" id="pic"></a>
+            <a href="cse/year/"><img src="{% static 'images/cse.png'%}" alt="cse image" srcset="" id="pic"></a>
             <p>CSE</p>
         </div>
         <div class="hr">
-            <a href="year/"><img src="{% static 'images/civil.png'%}" alt="cse image" srcset="" id="pic"></a>
+            <a href="civil/year/"><img src="{% static 'images/civil.png'%}" alt="cse image" srcset="" id="pic"></a>
             <p>CIVIL</p>
         </div>
         <div class="hr">
-            <a href="year/"><img src="{% static 'images/ece.png'%}" alt="cse image" srcset="" id="pic"></a>
+            <a href="ece/year/"><img src="{% static 'images/ece.png'%}" alt="cse image" srcset="" id="pic"></a>
             <p>ECE</p>
         </div>
         <div class="hr">
-            <a href="year/"> <img src="{% static 'images/eee.png'%}" alt="cse image" srcset="" id="pic"></a>
+            <a href="eee/year/"> <img src="{% static 'images/eee.png'%}" alt="cse image" srcset="" id="pic"></a>
             <p>EEE</p>
         </div>
         <div class="hr">
-            <a href="year/"><img src="{% static 'images/it.png'%}" alt="cse image" srcset="" id="pic"></a>
+            <a href="it/year/"><img src="{% static 'images/it.png'%}" alt="cse image" srcset="" id="pic"></a>
             <p>IT</p>
         </div>
         <div class="hr">
-            <a href="year/"><img src="{% static 'images/mech.png'%}" alt="cse image" srcset="" id="pic"></a>
+            <a href="mech/year/"><img src="{% static 'images/mech.png'%}" alt="cse image" srcset="" id="pic"></a>
             <p>MECH</p>
         </div>
     </div>
