--- a/park/templates/year.html
+++ b/park/templates/year.html
@@ -59,15 +59,15 @@
     
     <div class="container">
         <br>
-        <a id="first" href=""><img src="{% static 'images/first.jpeg' %}" alt="" width="250px" height="250px"></a>
+        <a id="first" href="first"><img src="{% static 'images/first.jpeg' %}" alt="" width="250px" height="250px"></a>
 
         
-        <a id="second" href=""><img src="{% static 'images/second.jpg' %}" alt="" width="250px" height="250px"></a><br>
+        <a id="second" href="second"><img src="{% static 'images/second.jpg' %}" alt="" width="250px" height="250px"></a><br>
     </div>
     <br>
         
-    <div class="container2"><a id="third" href=""><img src="{% static 'images/third.jpg' %}" alt="" width="250px" height="250px"></a>
-             <a id="final" href=""><img src="{% static 'images/final.jpg' %}" alt="" width="250px" height="250px"></a>
+    <div class="container2"><a id="third" href="third"><img src="{% static 'images/third.jpg' %}" alt="" width="250px" height="250px"></a>
+             <a id="final" href="final"><img src="{% static 'images/final.jpg' %}" alt="" width="250px" height="250px"></a>
     </div>
             
         
