--- a/park/templates/login.html
+++ b/park/templates/login.html
@@ -35,37 +35,18 @@
   				<path d="M4 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
 				</svg>
 				<input class="form" type="password" name="p" placeholder="Password"><br><br>
+				<p id="error" style="color:red;">{{msg}}</p>
 
-			   		<button id="button" class="btn btn-outline">Sign Up</button><br>
-				<h1>{{data.msg}}</h1>
+			   		<button onclick="click()" id="button" class="btn btn-outline">Sign Up</button><br>
+
 
 		    </div>
-		</form>
-
-		</div>
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+	<script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-
+</form>
+			</div>
 </body>
 </html>
