--- a/park/templates/attendance.html
+++ b/park/templates/attendance.html
@@ -63,7 +63,10 @@
 	<div class="container">
 			<lable>{{department}}</lable>
 			<label id="year">{{year}}(Attendance Sheet)</label>
-			<button class="btn btn-outline-danger">admin</button>
+		<form action="admin" method="post">
+			{% csrf_token %}
+			<button class="btn btn-outline-danger">edit</button>
+			</form>
 
 		</div>
 	<hr>
