--- a/park/templates/attendance.html
+++ b/park/templates/attendance.html
@@ -46,6 +46,11 @@
 			border: none;
 			border-bottom: 1px solid grey;
 		}
+		.sendLogo{
+			opacity: 5%;
+			border-radius: 50%;
+			border: 1px solid white;
+		}
 		
 
 	</style>
@@ -58,17 +63,18 @@
 		<h4>kaniyur</h4><hr>
 		<br>
 		
-				
 	</div>
+	
+	
 	<div class="container">
-			<lable>{{department}}</lable>
-			<label id="year">{{year}}(Attendance Sheet)</label>
+		<lable>{{department}}</lable>
+		<label id="year">{{year}}(Attendance Sheet)</label>
 		<form action="admin" method="post">
 			{% csrf_token %}
 			<button class="btn btn-outline-danger">edit</button>
-			</form>
+		</form>
 
-		</div>
+	</div>
 	<hr>
 	<br>
 	
@@ -99,9 +105,12 @@
 	</table>
 <br><br>
 	<input id="msg" type="text" name="" placeholder="Type The Message">
+	<img id="msgsend" class="sendLogo"src="send.jpg" width="50px" height="50px">
+	
 	<div class="buttons">
 		<button id="sendmsg" onclick="message()" class="btn btn-outline-success">Send Message</button>
-	<button id="submit" class="btn btn-outline-danger">submit</button></div>
+		<button id="submit" class="btn btn-outline-danger">submit</button>
+	</div>
 	
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
@@ -110,6 +119,7 @@
 	function message() {
 		// body...
 		document.getElementById("msg").style.opacity="90%"
+		document.getElementById("msgsend").style.opacity="90%"
 
 	}
 </script>
