--- a/park/templates/attendance.html
+++ b/park/templates/attendance.html
@@ -105,7 +105,7 @@
 	</table>
 <br><br>
 	<input id="msg" type="text" name="" placeholder="Type The Message">
-	<img id="msgsend" class="sendLogo"src="send.jpg" width="50px" height="50px">
+	<img id="msgsend" class="sendLogo"src="{% static 'images/send.jpg' %}" width="50px" height="50px">
 	
 	<div class="buttons">
 		<button id="sendmsg" onclick="message()" class="btn btn-outline-success">Send Message</button>
