--- a/park/templates/year.html
+++ b/park/templates/year.html
@@ -83,14 +83,14 @@
         </label>
         <BR>
         <div class="top">
-           <a id="first" href="first"><img src="{% static 'images/first.jpeg' %}" alt="" width="250px" height="250px"></a>
+           <a id="first" href="first"><img src="{% static 'images/first.jpg' %}" alt="" width="250px" height="250px"></a>
     
-           <a id="second" href="second"><img src="{% static 'images/second.jpeg' %}" alt="" width="250px" height="250px"></a>
+           <a id="second" href="second"><img src="{% static 'images/second.jpg' %}" alt="" width="250px" height="250px"></a>
         </div>
         <div class="bottom">
-            <a id="third" href="third"><img src="{% static 'images/third.jpeg' %}" alt="" width="250px" height="250px"></a>
+            <a id="third" href="third"><img src="{% static 'images/third.jpg' %}" alt="" width="250px" height="250px"></a>
              
-            <a id="final" href="final"><img src="{% static 'images/final.jpeg' %}" alt="" width="250px" height="250px"></a></div>
+            <a id="final" href="final"><img src="{% static 'images/final.jpg' %}" alt="" width="250px" height="250px"></a></div>
         </div>
     
     
