--- a/park/templates/year.html
+++ b/park/templates/year.html
@@ -83,7 +83,7 @@
         </label>
         <BR>
         <div class="top">
-           <a id="first" href="first"><img src="{% static 'images/first.jpg' %}" alt="" width="250px" height="250px"></a>
+           <a id="first" href="first"><img src="{% static 'images/first.jpeg' %}" alt="" width="250px" height="250px"></a>
     
            <a id="second" href="second"><img src="{% static 'images/second.jpg' %}" alt="" width="250px" height="250px"></a>
         </div>
