--- a/project/templates/attendance.html
+++ b/project/templates/attendance.html
@@ -7,51 +7,52 @@
 	<title>Attentance Page</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 	<style type="text/css">
-		.top
-		{
+		.top{
 			text-align: center;
+			
 			font-size: 20px;
 			color: purple;
 			background-color: #FDBD6B;
 			height: 200px;
 		}
-		.container
-		{
+		.container{
 			margin-top: 30px;
 			margin-bottom: 30px;
+			
+			
 			font-size: 26px;
 			color: black;
-			margin-left: 30px;	
+			margin-left: 30px;
+			
 		}
-		#year
-		{
+		#year{
 			padding-left: 140px;
 		}
-		.btn
-		{
+		.btn{
 			margin-left:  150px;
 		}
-		#sendmsg
-		{
-			margin-top:0%;
-			margin-left: 35%;
+		#sendmsg{
+			margin-left: 300px;
 		}
-		#submit
-		{
-			margin-left:800px;
+		#submit{
+			margin-left:400px;
 		}
-		.buttons
-		{
+		.buttons{
 			margin-top: 40px;
 		}
-		#msg
-		{
+		#msg{
 			opacity: 5%;
-			margin-bottom:10%;
-			margin-left: 30%;
+			margin-left: 300px;
 			border: none;
 			border-bottom: 1px solid grey;
 		}
+		.sendLogo{
+			opacity: 5%;
+			border-radius: 50%;
+			border: 1px solid white;
+		}
+		
+
 	</style>
 </head>
 <body>
@@ -61,59 +62,65 @@
 		<h1>Park College Of Engineering And Technology ,</h1>
 		<h4>kaniyur</h4><hr>
 		<br>
+		
 	</div>
-	<form action="admin/" method="post">
-		{% csrf_token %}
-		<div class="container">
-			<lable>{{department}}</lable>
-			<label id="year">{{year}}(Attendance Sheet)</label>
+	
+	<form action="admin" method="post">
+			{% csrf_token %}
+	<div class="container">
+		<lable>{{department}}</lable>
+		<label id="year">{{year}}(Attendance Sheet)</label>
+		
 			<button class="btn btn-outline-danger">edit</button>
-		</div>
-	</form>
+		</form>
+
+	</div>
 	<hr>
 	<br>
-	<form method="post" action="submit/">
-		{%csrf_token%}
+	
 	<table class="table  table-bordered table-hover">
 		<tr>
-			<th>S.No</th>
-			<th>RollNo</th>
-			<th>Name</th>
-			<th>Attendance</th>
-		</tr>
+		<th>S.No</th>
+		<th>RollNo</th>
+		<th>Name</th>
+		<th>Attendance</th>
+		
+	</tr>
 		{% for data in detial %}
-		<tr>
-			<td>{{data.id}}</td>
-			<td>{{data.reg}}</td>
-			<td>{{data.name}}</td>
-			<td><input type="checkbox" value={{data.name}} name={{data.id}}></td>
-		</tr>
-		{% endfor %}
+	<tr>
+
+		<td>{{data.id}}</td>
+		<td>{{data.reg}}</td>
+		<td>{{data.name}}</td>
+		<td><input type="checkbox" name=""></td>
+
+
+		
+
+
+		
+	</tr>
+			{% endfor %}
+	
 	</table>
 <br><br>
-
-	<div class="message">
-		<input id="msg" type="text" name="" placeholder="Type The Message">
-	</div>
-
-	<div class="buttons">
-		<button id="submit" class="btn btn-outline-danger">submit</button>
-	</div>
-
-</form>
-
+	<input id="msg" type="text" name="" placeholder="Type The Message">
+	<img id="msgsend" class="sendLogo" src="{% static 'images/send.jpg' %}" width="50px" height="50px">
+	
 	<div class="buttons">
 		<button id="sendmsg" onclick="message()" class="btn btn-outline-success">Send Message</button>
+		<button id="submit" class="btn btn-outline-danger">submit</button>
 	</div>
-		
 	
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 <script type="text/javascript">
-	function message()
-	{
+	
+	function message() {
 		// body...
 		document.getElementById("msg").style.opacity="90%"
+		document.getElementById("msgsend").style.opacity="90%"
+
 	}
 </script>
 </body>
