--- a/attendance/templates/department.html
+++ b/attendance/templates/department.html
@@ -13,8 +13,8 @@
 <body>
     <div class="containe">
         <!-- <img src="iconss/cn.png" alt="name" srcset="" id="pics" class="pics" style="width: 100%;"> -->
-        <center><p class="pname">PARK COLLEGE OF ENGINEERING AND TECHNOLOGY</p></center>
-        <div class="ci"><center><img src="{% static 'images/ci.png'%}" alt="" srcset=""></center></div>
+        <center><p class="pname">{{name}}</p></center>
+        <div class="ci"><center><img src="{{logo}}" alt="" srcset=""></center></div>
         <div class="hr">
             <a href="cse"><img src="{% static 'images/cse.png'%}" alt="cse image" srcset="" id="pic"></a>
             <p>CSE</p>
