--- a/attendance/static/css/institute signup.css
+++ b/attendance/static/css/institute signup.css
@@ -1,24 +1,22 @@
 body{
 	text-transform: capitalize;
-	background: url(https://s3.amazonaws.com/prod.static-content.quillette.com/2022/06/Student.png);
-	background-size:auto;
-    width: 50%;
-    height: 50%;
-    
-    
-
+	background-image: url(https://s3.amazonaws.com/prod.static-content.quillette.com/2022/06/Student.png);
+	background-size: cover;
 
 }
 .full{
-	text-align: center;
+	
 	margin-top: 100px;
 	background-color: rgb(255,255,255,0.4);
 	-webkit-backdrop-filter: blur(5px);
-	width: 400px;
-	height: 480px;
+	width: 500px;
+	height: 500px;
 	border-radius: 10%;
-	margin-left: 3%;
-	padding-top: 18px;
+	margin-left: 35%;
+	padding-top: 48px;
+	align-items: left;
+	padding-left: 40px;
+
 }
 label{
 	font-size: 20px;
@@ -31,6 +29,7 @@ input{
 
 }
 button{
+	margin-left: 140px;
 	
 	width: 130px;
 	height: 40px;
@@ -96,59 +95,4 @@ button{
     100% { background-position: 0 0; }
 }
 }
-@media screen and (max-width: 900px){
- 	body{
- 		background-image: none;
- 		background-color: black;
- 	}
- 	html{
- 		background-image: none;
- 		background-color: black;
- 	}
- }
- * {
-    box-shadow: none;
-}
-
-body {
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
-   
-    background-color: #d1dad3;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 17px;
-}
-
-.button-box{
-   
-    margin: 35px auto;
-    position: relative;
-    border-radius: 30px;
-    background: #fff;
-
-}
-.toggle-btn{
-
-    padding: 10px 30px;
-    cursor: pointer;
-    background: transparent;
-    border: 0;
-    outline: none;
-    position: relative;
-    text-align: center;
-}
-#btn{
-    left: 0;
-    top: 0;
-    position: absolute;
-    width: 160px;
-    height: 100%;
-    background: forestgreen;
-    border-radius: 30px;
-    transition: .5s;
-}
-
-
 
