--- a/attendance/static/css/login.css
+++ b/attendance/static/css/login.css
@@ -2,27 +2,29 @@ body{
 	text-transform: capitalize;
 	background: url(https://s3.amazonaws.com/prod.static-content.quillette.com/2022/06/Student.png);
 	background-size:auto;
-    width: 50%;
-    height: 50%;
-    
-    
-
-
+        width: 50%;
+        height: 50%;
 }
+
+
 .full{
 	text-align: center;
-	margin-top: 100px;
+	margin-top: 50px;
 	background-color: rgb(255,255,255,0.4);
 	-webkit-backdrop-filter: blur(5px);
 	width: 400px;
-	height: 480px;
+	height: 380px;
 	border-radius: 10%;
 	margin-left: 3%;
 	padding-top: 18px;
 }
+
+
 label{
 	font-size: 20px;
 }
+
+
 input{
 	border: none;
 	border-bottom: 1px solid black;
@@ -30,6 +32,7 @@ input{
 	
 
 }
+
 button{
 	
 	width: 130px;
@@ -37,6 +40,8 @@ button{
 	
 
 }
+
+
 .btn{
 	border: none;
 	outline: none;
@@ -51,18 +56,18 @@ button{
 .btn:before{
 	content: '';
 	background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
-    position: absolute;
-    top: -2px;
-    left:-2px;
-    background-size: 400%;
-    z-index: -1;
-    filter: blur(5px);
-    width: calc(100% + 4px);
-    height: calc(100% + 4px);
-    animation: glowing 20s linear infinite;
-    opacity: 0;
-    transition: opacity .3s ease-in-out;
-    border-radius: 5px;
+        position: absolute;
+	    top: -2px;
+	    left:-2px;
+	    background-size: 400%;
+	    z-index: -1;
+	    filter: blur(5px);
+	    width: calc(100% + 4px);
+	    height: calc(100% + 4px);
+	    animation: glowing 20s linear infinite;
+	    opacity: 0;
+	    transition: opacity .3s ease-in-out;
+	    border-radius: 5px;
 
 }
 
@@ -70,13 +75,16 @@ button{
     color: #000
 }
 
+
 .btn:active:after {
     background: transparent;
 }
 
+
 .btn:hover:before {
     opacity: 1;
 }
+
 
 .btn:after {
     z-index: -1;
@@ -111,22 +119,25 @@ button{
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
+    
     margin: 0;
    
     background-color: #d1dad3;
-    display: flex;
+   margin-left: 35%;
+   margin-right: 35%;
     justify-content: center;
     align-items: center;
     font-size: 17px;
 }
 
 .button-box{
+	margin-top: 40px;
    
-    margin: 35px auto;
+    margin-left: 100px;
     position: relative;
     border-radius: 30px;
     background: #fff;
+    width: 40%;
 
 }
 .toggle-btn{
@@ -138,6 +149,7 @@ body {
     outline: none;
     position: relative;
     text-align: center;
+
 }
 #btn{
     left: 0;
@@ -149,6 +161,7 @@ body {
     border-radius: 30px;
     transition: .5s;
 }
+
 
 
 
