--- a/attendance/static/css/login.css
+++ b/attendance/static/css/login.css
@@ -8,6 +8,7 @@ body{
 
 
 .full{
+	margin:auto;
 	text-align: center;
 	margin-top: 50px;
 	background-color: rgb(255,255,255,0.4);
@@ -123,8 +124,8 @@ body {
     margin: 0;
    
     background-color: #d1dad3;
-   margin-left: 35%;
-   margin-right: 35%;
+   margin:auto;
+   
     justify-content: center;
     align-items: center;
     font-size: 17px;
@@ -132,7 +133,7 @@ body {
 
 .button-box{
 	margin-top: 40px;
-   margin-left:40%;
+   margin:auto;
     margin-left: 100px;
     position: relative;
     border-radius: 30px;
