--- a/attendance/templates/login.html
+++ b/attendance/templates/login.html
@@ -11,6 +11,7 @@
 </head>
 
 <body style="background-color: black;">
+	<center>
 	<div class="form-box">
 		<div class="button-box">
 			<div id="btn"></div>
@@ -22,6 +23,8 @@
 		</div>
 		
 	</div>
+	</center>
+	<center>
 	
 <div class="full">
 	
@@ -58,9 +61,8 @@
 
 		
 	</div>
-	<script>
+	</center>
 	
-	</script>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 	
