--- a/attendance/static/css/login.css
+++ b/attendance/static/css/login.css
@@ -2,30 +2,31 @@ body{
 	text-transform: capitalize;
 	background: url(https://s3.amazonaws.com/prod.static-content.quillette.com/2022/06/Student.png);
 	background-size:auto;
-        width: 50%;
-        height: 50%;
+    width: 50%;
+    height: 50%;
+    
+    
+
+
 }
-
-
 .full{
-	margin:auto;
 	text-align: center;
-	margin-top: 50px;
+	margin-top: 100px;
 	background-color: rgb(255,255,255,0.4);
 	-webkit-backdrop-filter: blur(5px);
 	width: 400px;
-	height: 380px;
+	height: 50%;
 	border-radius: 10%;
-	margin-left: 40%;
-	padding-top: 18px;
+    margin-right:-30% ;
+	margin-left: 10%;
+    padding-right: 10%;
+    padding-left: 10%;
+	padding-top: 10%;
+    padding-bottom: 5%;
 }
-
-
 label{
 	font-size: 20px;
 }
-
-
 input{
 	border: none;
 	border-bottom: 1px solid black;
@@ -33,7 +34,6 @@ input{
 	
 
 }
-
 button{
 	
 	width: 130px;
@@ -41,8 +41,6 @@ button{
 	
 
 }
-
-
 .btn{
 	border: none;
 	outline: none;
@@ -57,18 +55,18 @@ button{
 .btn:before{
 	content: '';
 	background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
-        position: absolute;
-	    top: -2px;
-	    left:-2px;
-	    background-size: 400%;
-	    z-index: -1;
-	    filter: blur(5px);
-	    width: calc(100% + 4px);
-	    height: calc(100% + 4px);
-	    animation: glowing 20s linear infinite;
-	    opacity: 0;
-	    transition: opacity .3s ease-in-out;
-	    border-radius: 5px;
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 5px;
 
 }
 
@@ -76,16 +74,13 @@ button{
     color: #000
 }
 
-
 .btn:active:after {
     background: transparent;
 }
 
-
 .btn:hover:before {
     opacity: 1;
 }
-
 
 .btn:after {
     z-index: -1;
@@ -104,7 +99,7 @@ button{
     50% { background-position: 400% 0; }
     100% { background-position: 0 0; }
 }
-}
+
 @media screen and (max-width: 900px){
  	body{
  		background-image: none;
@@ -120,49 +115,44 @@ button{
 }
 
 body {
-    
+    font-family: 'Poppins', sans-serif;
     margin: 0;
    
     background-color: #d1dad3;
-   margin:auto;
-   
+    display: flex;
     justify-content: center;
     align-items: center;
     font-size: 17px;
 }
 
 .button-box{
-	margin-top: 40px;
-   margin:auto;
-    margin-left: 100px;
+   
+    margin: 35px auto;
     position: relative;
     border-radius: 30px;
     background: #fff;
-    width: 40%;
 
 }
 .toggle-btn{
 
     padding: 10px 30px;
-    cursor: pointer;
+    cursor:pointer;
     background: transparent;
     border: 0;
     outline: none;
     position: relative;
     text-align: center;
-
 }
 #btn{
     left: 0;
     top: 0;
-    position: absolute;
+    position:absolute;
     width: 160px;
     height: 100%;
     background: forestgreen;
     border-radius: 30px;
     transition: .5s;
 }
-
 
 
 
