--- a/attendance/templates/attendance.html
+++ b/attendance/templates/attendance.html
@@ -3,118 +3,132 @@
 
 {% load static %}
 <head>
-
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Attentance Page</title>
+	<link rel="shortcut icon" type="image/png" href="images/favicon.png">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 	<style type="text/css">
-		.top
-		{
+		.top{
 			text-align: center;
+			
 			font-size: 20px;
 			color: purple;
 			background-color: #FDBD6B;
 			height: 200px;
 		}
-		.container
-		{
+		.container{
 			margin-top: 30px;
 			margin-bottom: 30px;
+			
+			
 			font-size: 26px;
 			color: black;
-			margin-left: 30px;	
+			margin-left: 30px;
+			
 		}
-		#year
-		{
+		#year{
 			padding-left: 140px;
 		}
-		.btn
-		{
+		.btn{
 			margin-left:  150px;
 		}
-		#sendmsg
-		{
-			margin-top:0%;
-			margin-left: 35%;
+		#sendmsg{
+			margin-left: 300px;
 		}
-		#submit
-		{
-			margin-left:800px;
+		#submit{
+			margin-left:400px;
 		}
-		.buttons
-		{
+		.buttons{
 			margin-top: 40px;
 		}
-		#msg
-		{
+		#msg{
 			opacity: 5%;
-			margin-bottom:10%;
-			margin-left: 30%;
+			margin-left: 300px;
 			border: none;
 			border-bottom: 1px solid grey;
+			width: 140px;
 		}
+		.sendLogo{
+			opacity: 5%;
+			border-radius: 50%;
+			border: 1px solid white;
+		}
+		@media screen and (max-width: 900px){
+			.top{
+				background-size: cover;
+			}
+		}
+		
+		
+
 	</style>
 </head>
 <body>
 	<div class="top">
-		<img id="logo" src="{{logo}}" width="150px" height="100px"><br>
-		<h1>{{college}}</h1>
-		
+		<img id="logo" src="{{logo}}" width="150px" height="100px">
 		<br>
+		<h1>{{college}}</h1>
+		<hr>
+		<br>
+		
+				
 	</div>
 	<form action="admin/" method="post">
 		{% csrf_token %}
 		<div class="container">
 			<lable>{{department}}</lable>
-			<label id="year">{{year}}(Attendance Sheet)</label>
+			<label id="year">{{year}} (Attendance Sheet)</label>
 			<button class="btn btn-outline-danger">edit</button>
+
 		</div>
 	</form>
+	
 	<hr>
 	<br>
 	<form method="post" action="submit/">
 		{%csrf_token%}
+	
 	<table class="table  table-bordered table-hover">
 		<tr>
-			<th>S.No</th>
-			<th>RollNo</th>
-			<th>Name</th>
-			<th>Attendance</th>
-		</tr>
-		{% for data in detial %}
-		<tr>
+		<th>S.No</th>
+		<th>RollNo</th>
+		<th>Name</th>
+		<th>Attendance</th>
+		
+	</tr>
+	{% for data in detial %}
+	<tr>
 			<td>{{data.id}}</td>
 			<td>{{data.reg}}</td>
 			<td>{{data.name}}</td>
 			<td><input type="checkbox" value={{data.name}} name={{data.id}}></td>
-		</tr>
+	</tr>
 		{% endfor %}
+	
 	</table>
 <br><br>
+        <div class="message">
+			<input id="msg" type="text" name="" placeholder="Type The Message">
 
-	<div class="message">
-		<input id="msg" type="text" name="" placeholder="Type The Message">
-	</div>
-
-	<div class="buttons">
-		<button id="submit" class="btn btn-outline-danger">submit</button>
-	</div>
-
-</form>
+			<img id="msgsend" class="sendLogo"src="send.jpg" width="50px" height="50px">
+        </div>
+	
 
 	<div class="buttons">
 		<button id="sendmsg" onclick="message()" class="btn btn-outline-success">Send Message</button>
-	</div>
-		
+	<button id="submit" class="btn btn-outline-danger">submit</button></div>
 	
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-<script type="text/javascript">
-	function message()
-	{
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+	<script type="text/javascript">
+
+	function message() {
 		// body...
 		document.getElementById("msg").style.opacity="90%"
+
+                document.getElementById("msgsend").style.opacity="90%"
+
 	}
 </script>
 </body>
